edit to tech list on projects

--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                     <div class="lists">
                       <div class="listOne">
                         <ul>
+                          <li>Angular</li>
                           <li>Node</li>
-                          <li>Stripe API</li>
                           <li>Nodemailer</li>
                           <li>JavaScript</li>
                           <li>CSS</li>
@@ -365,7 +365,8 @@
                           <li>Devise</li>
                           <li>Bootstrap v4</li>
                           <li>AWS</li>
-                          <li class="hidden"></li>
+                          <li>Stripe API</li>
+                          <!-- <li class="hidden"></li> -->
                           <!-- <li class="hidden"></li> -->
                         </ul>
                       </div>
