changed links to open in a new tab

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <p>In the meantime,<br/ >check out some of my info here:</p>
 
           <div class='btns'>
-            <a class="button button-primary btn" href="https://www.linkedin.com/in/will-cook">LinkedIn</a>
-            <a class="button button-primary btn" href="https://github.com/willcook4">Github</a>
+            <a class="button button-primary btn" href="https://www.linkedin.com/in/will-cook" target="_blank" >LinkedIn</a>
+            <a class="button button-primary btn" href="https://github.com/willcook4" target="_blank" >Github</a>
             <a class="button button-primary btn" href="mailto:hello@doubleucook.com">Email</a>
           </div>
           <h1 class="name">Will Cook</h1>
