--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
         </div>
 
         <div class="one-half column actions">
-          <p>In the meantime,<br/ >check out some of my info here:</p>
+          <p>In the meantime,<br/ >check out some of my info here</p>
 
           <div class='btns'>
             <a class="button button-primary btn" href="https://www.linkedin.com/in/will-cook" target="_blank" >LinkedIn</a>
             <a class="button button-primary btn" href="https://github.com/willcook4" target="_blank" >Github</a>
+
+            <p class='contact'>Or get in touch</p>
             <a class="button button-primary btn" href="mailto:hello@doubleucook.com">Email</a>
           </div>
           <h1 class="name">Will Cook</h1>
